tests/type-errors/spec_fail_fid_unknown.arl
archetype spec_fail_fid_unknown

entry exec () {
  specification {
    fails  {
      f1 with BadFailureId(msg : nat) : true;
    }
  }
  effect {
    ()
  }
}
